syntax = "proto3";
package chat_proto;

message ChatMessage {
    string peer_id = 1;
    bytes data = 2;
}
